--- a/Golem/.cproject
+++ b/Golem/.cproject
@@ -47,9 +47,9 @@
                                 								
                                 <option defaultValue="gnu.cpp.compiler.debugging.level.max" id="gnu.cpp.compiler.exe.debug.option.debugging.level.1951113248" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" useByScannerDiscovery="false" valueType="enumerated"/>
                                 								
-                                <option id="gnu.cpp.compiler.option.dialect.std.958303535" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.default" valueType="enumerated"/>
+                                <option id="gnu.cpp.compiler.option.dialect.std.958303535" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.default" valueType="enumerated"/>
                                 								
-                                <option id="gnu.cpp.compiler.option.dialect.flags.1904672971" superClass="gnu.cpp.compiler.option.dialect.flags" useByScannerDiscovery="true" value="-std=c++17" valueType="string"/>
+                                <option id="gnu.cpp.compiler.option.dialect.flags.1904672971" name="Other dialect flags" superClass="gnu.cpp.compiler.option.dialect.flags" useByScannerDiscovery="true" value="-std=c++17" valueType="string"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.450516346" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
@@ -89,9 +89,29 @@
                         					
                     </folderInfo>
                     					
+                    <folderInfo id="cdt.managedbuild.config.gnu.exe.debug.2087687679.862901089" name="/" resourcePath="src/vendor/stb/tools">
+                        						
+                        <toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.1251744544" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.archiver.base.1119501191" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1183971391"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1032358115" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.815712702"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.758046667" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1687654215"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.152935942" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.2124452119"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.973179896" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.328403309"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.1566748385" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.31427296"/>
+                            						
+                        </toolChain>
+                        					
+                    </folderInfo>
+                    					
                     <sourceEntries>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+                        <entry excluding="vendor/stb/tools|vendor/stb/tests" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
                         					
                     </sourceEntries>
                     				
@@ -287,6 +307,26 @@
                         					
                     </folderInfo>
                     					
+                    <folderInfo id="cdt.managedbuild.config.gnu.exe.release.1267056879.1166317278" name="/" resourcePath="src/vendor/stb/tools">
+                        						
+                        <toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.1665278578" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.archiver.base.1794501208" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1509456494"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1920836498" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.124813482"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.338691398" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.30893986"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.c.linker.exe.release.377120314" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.release.958266020"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1061161353" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1484044927"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.1621182103" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release.1688424725"/>
+                            						
+                        </toolChain>
+                        					
+                    </folderInfo>
+                    					
                     <folderInfo id="cdt.managedbuild.config.gnu.exe.release.1267056879.2115149698" name="/" resourcePath="src/Core/ScriptingEngine">
                         						
                         <toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.2090354380" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
@@ -411,7 +451,7 @@
                         						
                         <entry excluding="examples|misc|backends/vulkan|backends" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="include/imgui"/>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+                        <entry excluding="vendor/stb/tools|vendor/stb/tests" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
                         					
                     </sourceEntries>
                     				
