--- a/Golem/.cproject
+++ b/Golem/.cproject
@@ -89,25 +89,51 @@
                         					
                     </folderInfo>
                     					
-                    <folderInfo id="cdt.managedbuild.config.gnu.exe.debug.2087687679.862901089" name="/" resourcePath="src/vendor/stb/tools">
+                    <folderInfo id="cdt.managedbuild.config.gnu.exe.debug.2087687679.855973267" name="/" resourcePath="include/imgui/backends">
                         						
-                        <toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.1251744544" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
+                        <toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.1571171905" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.archiver.base.1119501191" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1183971391"/>
+                            <targetPlatform id="cdt.managedbuild.target.gnu.platform.exe.debug" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.exe.debug"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1032358115" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.815712702"/>
+                            <tool id="cdt.managedbuild.tool.gnu.archiver.base.125343429" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1183971391"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.758046667" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1687654215"/>
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.581010391" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.815712702">
+                                								
+                                <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1094012080" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+                                							
+                            </tool>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.152935942" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.2124452119"/>
+                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1875059608" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1687654215">
+                                								
+                                <option id="gnu.c.compiler.option.dialect.std.79205092" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.default" valueType="enumerated"/>
+                                								
+                                <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1524364072" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
+                                							
+                            </tool>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.973179896" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.328403309"/>
+                            <tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.907169622" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.2124452119"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.1566748385" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.31427296"/>
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.364088799" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.328403309"/>
+                            							
+                            <tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.1610169269" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.31427296">
+                                								
+                                <inputType id="cdt.managedbuild.tool.gnu.assembler.input.335350020" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
+                                							
+                            </tool>
                             						
                         </toolChain>
                         					
                     </folderInfo>
+                    					
+                    <fileInfo id="cdt.managedbuild.config.gnu.exe.debug.2087687679.364672237" name="imgui_impl_allegro5.cpp" rcbsApplicability="disable" resourcePath="include/imgui/backends/imgui_impl_allegro5.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.581010391.2049634846">
+                        						
+                        <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.581010391.2049634846" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.581010391">
+                            							
+                            <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.2134068185" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+                            						
+                        </tool>
+                        					
+                    </fileInfo>
                     					
                     <sourceEntries>
                         						
@@ -307,25 +333,35 @@
                         					
                     </folderInfo>
                     					
-                    <folderInfo id="cdt.managedbuild.config.gnu.exe.release.1267056879.1166317278" name="/" resourcePath="src/vendor/stb/tools">
+                    <folderInfo id="cdt.managedbuild.config.gnu.exe.release.1267056879.772148014" name="/" resourcePath="include/imgui/backends">
                         						
-                        <toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.1665278578" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
+                        <toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.1738201947" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.archiver.base.1794501208" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1509456494"/>
+                            <tool id="cdt.managedbuild.tool.gnu.archiver.base.1189223461" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1452100936"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1920836498" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.124813482"/>
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1284783321" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.679453170"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.338691398" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.30893986"/>
+                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.2137442853" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.670884921"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.c.linker.exe.release.377120314" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.release.958266020"/>
+                            <tool id="cdt.managedbuild.tool.gnu.c.linker.exe.release.714997806" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.release.1694370018"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1061161353" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1484044927"/>
+                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1738484316" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1301586881"/>
                             							
-                            <tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.1621182103" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release.1688424725"/>
+                            <tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.689481781" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release.1708131834"/>
                             						
                         </toolChain>
                         					
                     </folderInfo>
+                    					
+                    <fileInfo id="cdt.managedbuild.config.gnu.exe.release.1267056879.1082405684" name="imgui_impl_allegro5.cpp" rcbsApplicability="disable" resourcePath="include/imgui/backends/imgui_impl_allegro5.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.679453170.83223176">
+                        						
+                        <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.679453170.83223176" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.679453170">
+                            							
+                            <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1112221696" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
+                            						
+                        </tool>
+                        					
+                    </fileInfo>
                     					
                     <folderInfo id="cdt.managedbuild.config.gnu.exe.release.1267056879.2115149698" name="/" resourcePath="src/Core/ScriptingEngine">
                         						
@@ -449,7 +485,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding="examples|misc|backends/vulkan|backends" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="include/imgui"/>
+                        <entry excluding="backends|examples|misc|backends/vulkan" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="include/imgui"/>
                         						
                         <entry excluding="vendor/stb/tools|vendor/stb/tests" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
                         					
