--- a/Golem/imgui.ini
+++ b/Golem/imgui.ini
@@ -20,15 +20,16 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=611,109
-Size=859,978
+Pos=11,45
+Size=10,6
 Collapsed=0
+DockId=0x00000012,0
 
 [Window][ImGuiResourceManager]
-Pos=0,38
-Size=11,13
+Pos=0,45
+Size=9,6
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000010,0
 
 [Window][DockSpace Demo]
 Pos=0,19
@@ -70,10 +71,16 @@ Size=46,32
 Collapsed=0
 
 [Window][Node Inspector]
-Pos=27,38
-Size=5,13
+Pos=23,38
+Size=9,13
 Collapsed=0
 DockId=0x0000000E,0
+
+[Window][Hierarchy]
+Pos=0,38
+Size=9,5
+Collapsed=0
+DockId=0x0000000F,0
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Pos=0,38 Size=32,13 Split=Y Selected=0xE927CF2F
@@ -86,10 +93,14 @@ DockSpace         ID=0x3BC79352 Pos=0,38 Size=32,13 Split=Y Selected=0xE927CF2F
       DockNode    ID=0x00000006 Parent=0x0000000D SizeRef=308,978 Selected=0x593C5C9B
   DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1920,259 Selected=0x5135D98A
 DockSpace         ID=0xBFC0FCF0 Window=0xE7846D07 Pos=0,38 Size=32,13 Split=X
-  DockNode        ID=0x00000002 Parent=0xBFC0FCF0 SizeRef=1569,978 Split=X
-    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=331,978 Selected=0xEAF52BEB
-    DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=1236,978 Split=X
-      DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=1707,962 CentralNode=1
+  DockNode        ID=0x00000002 Parent=0xBFC0FCF0 SizeRef=650,978 Split=X
+    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=203,978 Split=Y Selected=0xEAF52BEB
+      DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=182,325 Selected=0x788BAA0D
+      DockNode    ID=0x00000010 Parent=0x00000008 SizeRef=182,355 Selected=0xEAF52BEB
+    DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=288,978 Split=X
+      DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=1707,962 Split=Y
+        DockNode  ID=0x00000011 Parent=0x0000000A SizeRef=309,387 CentralNode=1
+        DockNode  ID=0x00000012 Parent=0x0000000A SizeRef=309,293 Selected=0xE927CF2F
       DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=195,962 Selected=0x750B5A10
-  DockNode        ID=0x0000000E Parent=0xBFC0FCF0 SizeRef=349,978 Selected=0x21B57D86
+  DockNode        ID=0x0000000E Parent=0xBFC0FCF0 SizeRef=296,978 Selected=0x21B57D86
 
