Implemented Batches and minor GUI changes.
Batches can draw multiple quads in 1 draw call.
GUI changes:
- added scene GUI window
- added Game GUI window
- added Debug GUI window
- moved EditorNodeInspector window to EditorLayer

--- a/Golem/imgui.ini
+++ b/Golem/imgui.ini
@@ -20,14 +20,13 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=11,45
-Size=10,6
+Pos=-2,273
+Size=423,445
 Collapsed=0
-DockId=0x00000012,0
 
 [Window][ImGuiResourceManager]
 Pos=0,45
-Size=9,6
+Size=15,6
 Collapsed=0
 DockId=0x00000010,0
 
@@ -71,16 +70,39 @@ Size=46,32
 Collapsed=0
 
 [Window][Node Inspector]
-Pos=23,38
-Size=9,13
+Pos=28,38
+Size=4,8
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Hierarchy]
 Pos=0,38
-Size=9,5
+Size=15,5
 Collapsed=0
 DockId=0x0000000F,0
+
+[Window][Debug]
+Pos=17,48
+Size=15,3
+Collapsed=0
+DockId=0x00000012,0
+
+[Window][Game]
+Pos=17,38
+Size=3,8
+Collapsed=0
+DockId=0x0000000A,1
+
+[Window][Scene]
+Pos=17,38
+Size=3,8
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Create Project]
+Pos=60,60
+Size=135,157
+Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Pos=0,38 Size=32,13 Split=Y Selected=0xE927CF2F
@@ -92,15 +114,15 @@ DockSpace         ID=0x3BC79352 Pos=0,38 Size=32,13 Split=Y Selected=0xE927CF2F
         DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=254,978 Selected=0x78C07CE7
       DockNode    ID=0x00000006 Parent=0x0000000D SizeRef=308,978 Selected=0x593C5C9B
   DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1920,259 Selected=0x5135D98A
-DockSpace         ID=0xBFC0FCF0 Window=0xE7846D07 Pos=0,38 Size=32,13 Split=X
-  DockNode        ID=0x00000002 Parent=0xBFC0FCF0 SizeRef=650,978 Split=X
-    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=203,978 Split=Y Selected=0xEAF52BEB
-      DockNode    ID=0x0000000F Parent=0x00000008 SizeRef=182,325 Selected=0x788BAA0D
-      DockNode    ID=0x00000010 Parent=0x00000008 SizeRef=182,355 Selected=0xEAF52BEB
-    DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=288,978 Split=X
-      DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=1707,962 Split=Y
-        DockNode  ID=0x00000011 Parent=0x0000000A SizeRef=309,387 CentralNode=1
-        DockNode  ID=0x00000012 Parent=0x0000000A SizeRef=309,293 Selected=0xE927CF2F
-      DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=195,962 Selected=0x750B5A10
-  DockNode        ID=0x0000000E Parent=0xBFC0FCF0 SizeRef=296,978 Selected=0x21B57D86
+DockSpace         ID=0xBFC0FCF0 Pos=0,38 Size=32,13 Split=X
+  DockNode        ID=0x00000008 Parent=0xBFC0FCF0 SizeRef=529,978 Split=Y Selected=0x788BAA0D
+    DockNode      ID=0x0000000F Parent=0x00000008 SizeRef=543,462 Selected=0x788BAA0D
+    DockNode      ID=0x00000010 Parent=0x00000008 SizeRef=543,514 Selected=0xEAF52BEB
+  DockNode        ID=0x00000009 Parent=0xBFC0FCF0 SizeRef=1389,978 Split=Y
+    DockNode      ID=0x00000011 Parent=0x00000009 SizeRef=1920,725 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000011 SizeRef=957,978 Split=X
+        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=1707,962 CentralNode=1
+        DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=195,962 Selected=0x750B5A10
+      DockNode    ID=0x0000000E Parent=0x00000011 SizeRef=430,978 Selected=0x21B57D86
+    DockNode      ID=0x00000012 Parent=0x00000009 SizeRef=1920,251 Selected=0xAD6468A3
 
