--- a/Golem/imgui.ini
+++ b/Golem/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=0,0
+Pos=301,277
 Size=400,400
 Collapsed=0
 
@@ -20,7 +20,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=-2,273
+Pos=238,420
 Size=423,445
 Collapsed=0
 
@@ -70,8 +70,8 @@ Size=46,32
 Collapsed=0
 
 [Window][Node Inspector]
-Pos=28,38
-Size=4,8
+Pos=29,38
+Size=3,8
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -89,13 +89,13 @@ DockId=0x00000012,0
 
 [Window][Game]
 Pos=17,38
-Size=3,8
+Size=10,8
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene]
 Pos=17,38
-Size=3,8
+Size=10,8
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -114,15 +114,15 @@ DockSpace         ID=0x3BC79352 Pos=0,38 Size=32,13 Split=Y Selected=0xE927CF2F
         DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=254,978 Selected=0x78C07CE7
       DockNode    ID=0x00000006 Parent=0x0000000D SizeRef=308,978 Selected=0x593C5C9B
   DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1920,259 Selected=0x5135D98A
-DockSpace         ID=0xBFC0FCF0 Pos=0,38 Size=32,13 Split=X
-  DockNode        ID=0x00000008 Parent=0xBFC0FCF0 SizeRef=529,978 Split=Y Selected=0x788BAA0D
+DockSpace         ID=0xBFC0FCF0 Window=0xE7846D07 Pos=0,38 Size=32,13 Split=X
+  DockNode        ID=0x00000008 Parent=0xBFC0FCF0 SizeRef=318,978 Split=Y Selected=0x788BAA0D
     DockNode      ID=0x0000000F Parent=0x00000008 SizeRef=543,462 Selected=0x788BAA0D
     DockNode      ID=0x00000010 Parent=0x00000008 SizeRef=543,514 Selected=0xEAF52BEB
-  DockNode        ID=0x00000009 Parent=0xBFC0FCF0 SizeRef=1389,978 Split=Y
-    DockNode      ID=0x00000011 Parent=0x00000009 SizeRef=1920,725 Split=X
-      DockNode    ID=0x00000002 Parent=0x00000011 SizeRef=957,978 Split=X
-        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=1707,962 CentralNode=1
+  DockNode        ID=0x00000009 Parent=0xBFC0FCF0 SizeRef=1600,978 Split=Y
+    DockNode      ID=0x00000011 Parent=0x00000009 SizeRef=1920,679 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000011 SizeRef=478,978 Split=X
+        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=1707,962 CentralNode=1 Selected=0x18B8C0DE
         DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=195,962 Selected=0x750B5A10
-      DockNode    ID=0x0000000E Parent=0x00000011 SizeRef=430,978 Selected=0x21B57D86
-    DockNode      ID=0x00000012 Parent=0x00000009 SizeRef=1920,251 Selected=0xAD6468A3
+      DockNode    ID=0x0000000E Parent=0x00000011 SizeRef=119,978 Selected=0x21B57D86
+    DockNode      ID=0x00000012 Parent=0x00000009 SizeRef=1920,297 Selected=0xAD6468A3
 
